Fix wrap issue in Safari

--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -1,15 +1,6 @@
 @import 'home'
 @import 'repo-graphic'
 
-.block-grid
-  display: flex
-  flex-wrap: wrap
-
-.block-grid .deal-card
-  display: flex
-  height: 320px
-  margin: 0
-
 .deal-card a
   display: flex
   flex-direction: column
