--- a/app/styles/home.sass
+++ b/app/styles/home.sass
@@ -1,4 +1,7 @@
-.home-category-repo
+.home-category-repo.deal-card
+  > a
+    height: 320px
+
   &:hover
     rect
       stroke: rgba(255, 255, 255, 0)
